[Refactor] 입력값 수정, 회원 수정 로직 수정